# Talking-Head-Generation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: talking_head.yaml
configs/model/: wav2lip.yaml
demo/: streamlit_app.py
scripts/: demo.py  evaluate.py  train.py
src/: __init__.py
src/data/: __init__.py  talking_head_dataset.py
src/eval/: __init__.py  talking_head_metrics.py
src/losses/: __init__.py  talking_head_losses.py
src/models/: __init__.py  wav2lip.py
src/utils/: __init__.py  audio.py  device.py  video.py
tests/: test_talking_head.py
